[tool.poetry]
name = "fxr"
version = "0.2.5"
description = "An ag/sed replacement"
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]
license = "MIT"
readme = 'README.md'  # Markdown files are supported
repository = "https://github.com/pmav99/fxr"
homepage = "https://github.com/pmav99/fxr"
keywords=['fxr', 'search', 'find', 'replace', 'find and replace', 'search and replace']
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Topic :: Software Development",
    "Topic :: System",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
]

packages = [
    { include = "fxr.py", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
munch = "^2.3"
bump2version = "^0.5.10"
"ruamel.yaml" = "^0.15.89"
pre-commit = "^1.15"
pre-commit-hooks = "^2.1"
detect-secrets = "^0.12.2"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[tool.poetry.scripts]
fxr = 'fxr:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
